fix building, add building sprite to building Designation